--- a/{{cookiecutter.repo_name}}/app/build.gradle
+++ b/{{cookiecutter.repo_name}}/app/build.gradle
@@ -117,7 +117,7 @@ dependencies {
     {% endif %}
 
     //test
-    testimplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
         exclude group: 'com.google.code.findbugs'
