--- a/{{cookiecutter.repo_name}}/build.gradle
+++ b/{{cookiecutter.repo_name}}/build.gradle
@@ -46,6 +46,7 @@ ext{
     glideVersion = '4.0.0-RC0'
     materializeVersion = '1.0.1'
     materialDrawerVersion = '5.9.1'
+    ankoVersion = '0.10'
 
     //supportLib
     supportLib = "com.android.support:support-v4:$supportLibVersion"
@@ -93,6 +94,20 @@ ext{
     //glide
     glide = "com.github.bumptech.glide:glide:$glideVersion"
     glideAnnotation = "com.github.bumptech.glide:compiler:$glideVersion"
+
+    //kotlin-anko
+    ankoCommonV4Support = "org.jetbrains.anko:anko-support-v4:$ankoVersion"
+    ankoCommonV4SupportCommon = "org.jetbrains.anko:anko-support-v4-commons:$ankoVersion"
+    ankoCommon = "org.jetbrains.anko:anko-appcompat-v7-commons:$ankoVersion"
+    ankoCompat = "org.jetbrains.anko:anko-appcompat-v7:$ankoVersion"
+    ankoCompatCoroutines = "org.jetbrains.anko:anko-coroutines:$ankoVersion"
+    ankoCardView = "org.jetbrains.anko:anko-cardview-v7:$ankoVersion"
+    ankoDesign = "org.jetbrains.anko:anko-design:$ankoVersion"
+    ankoDesignCoroutines = "org.jetbrains.anko:anko-design-coroutines:$ankoVersion"
+    ankoGridLayout = "org.jetbrains.anko:anko-gridlayout-v7:$ankoVersion"
+    ankoPercent = "org.jetbrains.anko:anko-percent:$ankoVersion"
+    ankoRecyclerView = "org.jetbrains.anko:anko-recyclerview-v7:$ankoVersion"
+    ankoRecyclerViewCoroutines = "org.jetbrains.anko:anko-recyclerview-v7-coroutines:$ankoVersion"
 
     buildTime = new Date().format("yyyy-MM-dd'T'HH:mm'Z'", TimeZone.getTimeZone("UTC"))
 }
